src/objects/AnswerOption__c.object
<CustomObject>
    <fields>
        <fullName>AnsOptionType__c</fullName>
        <label>AnsOptionType</label>
        <picklist>
            <picklistValues>
                <fullName>Text</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Boolean</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Date</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Picklist</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Picklist (Multi-Select)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TextArea</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>AnswerOptionText__c</fullName>
        <label>Answer Option Text</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>AnswerUnit__c</fullName>
        <label>AnswerUnit</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CRFAdditionalQuestion__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CRFAdditionalQuestion</label>
        <referenceTo>CRFAdditionalQuestion__c</referenceTo>
        <relationshipLabel>AnswerOptions</relationshipLabel>
        <relationshipName>AnswerOptions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ContextDataUnit__c</fullName>
        <label>ContextDataUnit</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contextdata__c</fullName>
        <label>Contextdata</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DateTypeAnswer__c</fullName>
        <label>Date Type Answer</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DeletedDateTime__c</fullName>
        <description>This is for soft delete</description>
        <label>DeletedDateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Is_Deleted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>this is for soft delete</description>
        <label>Is Deleted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QuestionId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Question Id</label>
        <referenceTo>QuestionAnswer__c</referenceTo>
        <relationshipLabel>AnswerOptions</relationshipLabel>
        <relationshipName>AnswerOptions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SNo__c</fullName>
        <label>SNo</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Selectable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Selectable</label>
        <type>Checkbox</type>
    </fields>
    <label>AnswerOptions</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>Ans-{000000}</displayFormat>
        <label>AnswerOption</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>AnswerOptions</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>